--- a/aplicacion/pubspec.yaml
+++ b/aplicacion/pubspec.yaml
@@ -34,7 +34,7 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-    - json/base.json
+    - assets/
 
 flutter_icons:
   android: true
