--- a/aplicacion/pubspec.yaml
+++ b/aplicacion/pubspec.yaml
@@ -23,6 +23,9 @@ dependencies:
   cached_network_image: ^3.4.1
   go_router: ^15.1.2
   provider: ^6.1.5
+  fl_chart: ^0.68.0
+  intl: ^0.20.2
+
 
 dev_dependencies:
   flutter_test:
